--- a/index.html
+++ b/index.html
@@ -1,425 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" ;>
+<html>
+    
+    <head>
+        <h1>Cookie Test</h1>
+        <h2 id="CookieText">null</h2>
+    </head>
+    <body>
+        <button type="button" onclick="CreateCookie('username', 'Ryan Herwig', 400)">Create Cookie</button>
+        <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
 
-<head>
-  <title>Matrix Solitaire</title>
-  <meta charset="utf-8" />
-  <link rel="icon" href="Pictures/icon.png" />
-
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    canvas {
-      background: #eee;
-      display: block;
-      margin: 0;
-    }
-
-    .Tenbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 25%;
-      top: 35%;
-      width: 35%;
-      height: 25%;
-      transform: translate(-50%, -50%);
-      cursor: pointer;
-    }
-
-    .Individualbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 75%;
-      top: 35%;
-      width: 35%;
-      height: 25%;
-      transform: translate(-50%, -50%);
-      cursor: pointer;
-    }
-
-    .Rulesbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 25%;
-      top: 70%;
-      width: 35%;
-      height: 25%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Creditsbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 75%;
-      top: 70%;
-      width: 35%;
-      height: 25%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Rulesbutton2 {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: (4/6)%;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 4%;
-      top: 12%;
-      width: 7%;
-      height: 6%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Backbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 6%;
-      top: 93%;
-      width: 10%;
-      height: 10%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Nextbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 94%;
-      top: 93%;
-      width: 10%;
-      height: 10%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Undobutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: (4/4)%;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 4%;
-      top: 5%;
-      width: 7%;
-      height: 6%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .Restartbutton {
-      position: absolute;
-      background-color: #3A3B3C;
-      border: 1px solid #FFFFFF;
-
-      color: white;
-      text-align: center;
-      font-size: (4/7)%;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 900;
-      letter-spacing: 0.05em;
-      left: 4%;
-      top: 19%;
-      width: 7%;
-      height: 6%;
-      transform: translate(-50%, -50%);
-      display: none;
-      cursor: pointer;
-    }
-
-    .RulesText1 {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 0%;
-      top: 70%;
-      width: 33.33%;
-      height: 30%;
-      transform: translate(0%, -50%);
-    }
-
-    .RulesText2 {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 49.5%;
-      top: 70%;
-      width: 30%;
-      height: 30%;
-      transform: translate(-50%, -50%);
-    }
-
-    .RulesText3 {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 82.5%;
-      top: 70%;
-      width: 30%;
-      height: 30%;
-      transform: translate(-50%, -50%);
-    }
-
-    .RulesText4 {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 50%;
-      top: 80%;
-      width: 75%;
-      height: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    .CreditsText {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 50%;
-      top: 40%;
-      width: 100%;
-      height: 40%;
-      transform: translate(-50%, -50%);
-    }
-
-    table,
-    th,
-    td {
-      border: 1px solid;
-    }
-
-    .tableStyle {
-      position: absolute;
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      font-family: helvetica, arial, sans-serif;
-      font-weight: 100px;
-      letter-spacing: 0.05em;
-      left: 50%;
-      top: 25%;
-      width: 100%;
-      height: 5%;
-      transform: translate(-50%, -50%);
-      display: none;
-    }
-
-    .unselectable {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    body {
-      overflow: hidden;
-    }
-  </style>
-</head>
-
-<body>
-  <div>
-    <canvas id="canvas" style="position: absolute
-        top:0; 
-        left:0;
-        background-color: #3A3B3C;
-        display: block;
-        border:0px;">
-    </canvas>
-
-    <button id="Individualbutton" class="Individualbutton unselectable">
-      PLAY
-      <br>
-      INDIVIDUAL VALUES
-      <br>
-      (HARD)
-    </button>
-    <button id="Tenbutton" class="Tenbutton unselectable">
-      PLAY
-      <br>
-      ALL FACE CARDS 10
-      <br>
-      (EASY)
-    </button>
-    <button id="Rulesbutton" class="Rulesbutton unselectable">
-      RULES
-    </button>
-    <button id="Creditsbutton" class="Creditsbutton unselectable">
-      CREDITS
-    </button>
-    <button id="Rulesbutton2" class="Rulesbutton2 unselectable">
-      RULES
-    </button>
-    <button id="Restartbutton" class="Restartbutton unselectable">
-      RESTART
-    </button>
-    <button id="Backbutton" class="Backbutton unselectable">
-      BACK
-    </button>
-    <button id="Nextbutton" class="Nextbutton unselectable">
-      NEXT
-    </button>
-    <button id="Undobutton" class="Undobutton unselectable">
-      UNDO
-    </button>
-    <div id="RulesText1" class="RulesText1 unselectable">
-      <br>Place Cards in Matrices<br>
-    </div>
-    <div id="RulesText2" class="RulesText2 unselectable">
-      Make both matrices have equal sums in their matching rows or columns.
-    </div>
-    <div id="RulesText3" class="RulesText3 unselectable">
-      Matching rows or columns with equal values get removed from the game
-    </div>
-    <div id="CreditsText" class="CreditsText unselectable">
-      Game Concept By: <br><br>
-      Ryan Herwig, <br>Mary Larsen, <br>Joseph Gross, <br>Darius Herman <br> <br><br>
-      Game Coded By: <br><br>
-      Ryan Herwig
-    </div>
-    <table id="Table" class="tableStyle unselectable">
-      <tr>
-        <th>Card Name</th>
-        <th>All Face Cards 10 Values</th>
-        <th>Individual Values</th>
-      </tr>
-      <tr>
-        <td>Ace</td>
-        <td>1 or 11, able to be swapped throughout the game</td>
-        <td>1 or 14, able to be swapped throughout the game</td>
-      </tr>
-      <tr>
-        <td>Jokers</td>
-        <td>0</td>
-        <td>0</td>
-      </tr>
-      <tr>
-        <td>Jacks</td>
-        <td>10</td>
-        <td>11</td>
-      </tr>
-      <tr>
-        <td>Queens</td>
-        <td>10</td>
-        <td>12</td>
-      </tr>
-      <tr>
-        <td>Kings</td>
-        <td>10</td>
-        <td>13</td>
-      </tr>
-    </table>
-    <div id="RulesText4" class="RulesText4 unselectable">
-      All numbered cards have a value of their numerical value
-      <br> <br>
-      Victory Condition:
-      <br>
-      Getting all cards out of your hand
-      <br> <br>
-      Lose Condition:
-      <br>
-      All matrices get filled and no possible moves remain
-    </div>
-
-  </div>
-
-  <script src="./Deck.js" type="module"></script>
-  <script src="./MoveCards.js" type="module"></script>
-  <script src="./HUD.js" type="module"></script>
-  <script src="./Managers/GameManager.js" type="module"></script>
-  <script src="./Managers/MenuManager.js" type="module"></script>
-  <script src="./MatrixScript.js" type="module"></script>
-</body>
-
+        <script src="ToyCookies.cs"></script>
+    </body>
 </html>
