--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <h2 id="CookieText">null</h2>
     </head>
     <body>
-        <button type="button" onclick="CreateCookie('username', 'Ryan Herwig', 400)">Create Cookie</button>
+        <textarea name="TextArea" id="message" style="height: 50px; width: 250px;" onclick="this.value=''">Enter name</textarea>
+        <br>
+        <button type="button" onclick="CreateCookie(TextArea.value, 'Ryan Herwig', 400)">Create Cookie</button>
         <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
 
         <script src="ToyCookies.cs"></script>
