--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <textarea name="TextArea" id="message" style="height: 50px; width: 250px;" onclick="this.value=''">Enter name</textarea>
         <br>
-        <button type="button" onclick="CreateCookie(TextArea.value, 'Ryan Herwig', 400)">Create Cookie</button>
+        <button type="button" onclick="SetCookieText('username', 400)">Create Cookie</button>
         <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
 
         <script src="ToyCookies.cs"></script>
