--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <h2 id="CookieText">null</h2>
     </head>
     <body>
-        <textarea name="TextArea" id="message" style="height: 50px; width: 250px;" onclick="this.value=''">Enter name</textarea>
-        <br>
+        <input id="message" placeholder="Enter name (or anything, really)" style="height: 25px; width: 200px;">
+        <br><br>
         <button type="button" onclick="SetCookieText('username', 400)">Create Cookie</button>
         <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
 
