--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <br><br>
         <button type="button" onclick="SetCookieText('username', 400)">Create Cookie</button>
         <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
+        <br><br>
+        <button type="button" onclick="Download()">Download Cookies</button>
 
         <script src="ToyCookies.cs"></script>
     </body>
