--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button type="button" onclick="ChangeCookieDisplayText('username')">Read Cookie</button>
         <br><br>
         <button type="button" onclick="Download()">Download Cookies</button>
+        <a href="data:application/octet-stream;charset=utf-16le;base64,//5mAG8AbwAgAGIAYQByAAoA">text file</a>
 
         <script src="ToyCookies.cs"></script>
     </body>
