--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
                 <td><button onclick="SaveFile()">Save to File</button></td>
             </tr>
             <tr>
-                <td><input type="file" id="fileToLoad"></td>
-                <td><button onclick="LoadFile()">Load File</button></td>
+                <td><input type="file" accept="text/plain" onchange="LoadFile(event)"></td>
             </tr>
         </table>
-
-        <a id="saveFile" href="data:application/octet-stream,field1%2Cfield2%0Afoo%2Cbar%0Agoo%2Cgai%0A">Download?</a>
 
         <script src="ToyCookies.cs"></script>
     </body>
